# jdcloud-sdk-cpp-signer

./: .editorconfig  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  NEWS.md  README.md  main.cpp
debian/: changelog  control  copyright  rules  watch
examples/cmake/: CMakeLists.txt  main.cpp
examples/makefile/: Makefile  main.cpp
examples/meson/: main.cpp  meson.build
h/: CMakeLists.txt  JdcloudSigner.h
h/http/: HttpRequest.h  Scheme.h  URI.h
h/jdcloud_signer/: Credential.h  JdcloudSigner.h
h/jdcloud_signer/http/: HttpRequest.h  HttpTypes.h  Scheme.h  URI.h
h/jdcloud_signer/util/: DateTime.h  StringUtils.h
h/jdcloud_signer/util/crypto/: HashingUtils.h  Outcome.h  Sha256.h  Sha256HMAC.h
h/jdcloud_signer/util/logging/: ConsoleLogSystem.h  FormattedLogSystem.h  LogLevel.h  LogMacros.h  LogSystemInterface.h
h/util/: DateTime.h  StringUtils.h
h/util/crypto/: HashResult.h  HashingUtils.h  Outcome.h  Sha256.h  Sha256HMAC.h
h/util/logging/: ConsoleLogSystem.h  FormattedLogSystem.h  LogMacros.h  LogSystemInterface.h  Logging.h
include/: CMakeLists.txt
include/jdcloud_signer/: Credential.h  JdcloudSigner.h
include/jdcloud_signer/http/: HttpTypes.h  URI.h
include/jdcloud_signer/logging/: ConsoleLogSystem.h  FormattedLogSystem.h  LogSystemInterface.h
internal/jdcloud_signer/: JdcloudSignerImpl.h
internal/jdcloud_signer/logging/: LogMacros.h
internal/jdcloud_signer/util/: StringUtils.h
internal/jdcloud_signer/util/crypto/: HashResult.h  HashingUtils.h  Outcome.h
src/: CMakeLists.txt  JdcloudSigner.cpp  JdcloudSignerImpl.cpp  JdcloudSignerImpl.h  libjdcloud_signer.pc.in  libjdcloudsigner.pc.in
src/http/: HttpRequest.cpp  HttpTypes.cpp  Scheme.cpp  URI.cpp
src/jdcloud_signer/util/crypto/: HashingUtils.h
src/jdcloud_signer/util/logging/: LogMacros.h  Logging.h
src/logging/: ConsoleLogSystem.cpp  FormattedLogSystem.cpp  LogLevel.cpp  Logging.cpp
src/tests/: JdcloudSignerImplTest.cpp  Sha256Test.cpp  URITest.cpp
src/util/: DateTime.cpp  StringUtils.cpp
src/util/crypto/: HashingUtils.cpp  Sha256.cpp  Sha256HMAC.cpp
src/util/logging/: ConsoleLogSystem.cpp  FormattedLogSystem.cpp  LogLevel.cpp  Logging.cpp
